--- a/src/components/Rating.scss
+++ b/src/components/Rating.scss
@@ -9,7 +9,7 @@
   padding: 20px;
   height: auto;
   width: 50%;
-  &.light-green {
+  &.light-blue {
     background-color: #53ace4;
     color: black;
   }
