--- a/src/components/GameCard.scss
+++ b/src/components/GameCard.scss
@@ -14,12 +14,12 @@
     box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.5);
     background-color: $primary-darkgray;
     transition: 0.3s;
-    padding: 15px;
+    padding: 1.2rem;
     width: 300px;
     height: 21vh;
-    padding-bottom: 100px;
+    padding-bottom: 7rem;
     .game-name {
-      font-size: 18px;
+      font-size: 1.2rem;
     }
     .game-image-container {
       width: 300px;
