--- a/src/components/GameDetails.scss
+++ b/src/components/GameDetails.scss
@@ -1,12 +1,12 @@
 @import "src/App.scss";
 
 .game-title {
-  font-size: 50px;
+  font-size: 4rem;
   font-weight: bold;
 }
 
 .game-details-image-container {
-  width: 500px;
+  width: 30rem;
   .game-details-image {
     width: 100%;
   }
@@ -21,14 +21,14 @@
     max-width: 100vw;
     background-color: $primary-darkgray;
     border-radius: 20px;
-    padding: 40px;
+    padding: 2.5rem;
     p,
     h3 {
       margin: 0px;
     }
     h3 {
-      font-size: 30px;
-      padding-bottom: 10px;
+      font-size: 2rem;
+      padding-bottom: 1rem;
     }
   }
   .info-card {
@@ -37,7 +37,7 @@
     gap: 1rem;
     background-color: $primary-darkgray;
     border-radius: 10px;
-    padding: 20px;
+    padding: 1.5rem;
     height: 50vh;
   }
 }
@@ -52,15 +52,15 @@
   align-items: center;
   flex-direction: column;
   background-color: green;
-  width: 100px;
-  height: 100px;
+  width: 6rem;
+  height: 6rem;
   border-radius: 20px;
   font-size: 2rem;
   font-weight: bold;
 }
 .rating {
-  padding-top: 12px;
+  padding-top: 1.2rem;
 }
 .rating-total {
-  font-size: 15px;
+  font-size: 1rem;
 }
