--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -4,10 +4,10 @@
   align-items: center;
   font-weight: bold;
   p {
-    font-size: 18px;
+    font-size: 1.8rem;
   }
   .title {
-    font-size: 80px;
+    font-size: 6rem;
     font-weight: bold;
   }
 }
@@ -23,5 +23,5 @@
   display: flex;
   flex-direction: row;
   gap: 5rem;
-  font-size: 200px;
+  font-size: 10rem;
 }
