--- a/src/components/Rating.scss
+++ b/src/components/Rating.scss
@@ -6,7 +6,7 @@
   gap: 5rem;
   background-color: $primary-darkgray;
   border-radius: 10px;
-  padding: 20px;
+  padding: 2rem;
   height: auto;
   width: 50%;
   &.light-blue {
@@ -24,10 +24,17 @@
     background-color: #ff4c4c;
   }
   .rating-percent {
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: bold;
   }
   .count {
-    font-size: 10px;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .rating-card {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
