--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 @import "src/App.scss";
 :root {
-  //font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: $primary-black;
 
